@@ -1,5 +1,10 @@
 2005-12-04  SHIBATA Tomohisa  <shibata@kahua.org>
 
+	* src/kahua/persistence.scm:
+	fixed unlock db timing.
+
+2005-12-04  Nobuo Yamashita  <nobsun@sampou.org>
+
 	* src/kahua-server.scm:
 	Use sys-exit instead of exit in signal handler.
 
